<resources>
    <string name="app_name">乐购直播</string>

    <string name="tab_home">首页</string>
    <string name="tab_live">直播</string>
    <string name="tab_lottery">开奖</string>
    <string name="tab_betting">投注</string>
    <string name="tab_quiz">圈子</string>
    <string name="tab_mine">我的</string>
    <!-- ================================================================== 规则 ================================================================== -->
    <string name="password_rule">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#038;</string>
    <string name="smart_last_update">最后更新</string>
    <string name="loading">加载中..</string>
    <string name="loading_short">~</string>
    <string name="list_more">我是有底线滴～～</string>
    <string name="text_space">&#160;&#160;</string>
    <string name="sure">确定</string>
    <!-- ================================================================== 登录 ================================================================== -->
    <string name="register_now">立即注册</string>
    <string name="login_phone">请输入手机号码</string>
    <string name="login_password">请输入密码</string>
    <string name="login_profile">请输入验证码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_get_profile">获取验证码</string>
    <string name="login_in">登录</string>
    <string name="login_register_finish">完成</string>
    <string name="login_contact_customer">联系客服</string>
    <string name="login_with_identify">使用验证码登录</string>
    <!-- ================================================================== Home ================================================================== -->
    <string name="home_live_hot">热门推荐</string>
    <string name="home_live_pre">直播预告</string>
    <string name="home_live_recommend">主播推荐</string>
    <string name="home_live_expert">专家红单</string>
    <string name="home_look_more">查看更多     ＞</string>
    <string name="home_lottery">彩票</string>
    <string name="home_red">红包</string>
    <string name="home_attention">关注</string>
    <string name="home_has_attention">已关注</string>
    <string name="home_news">最新资讯</string>
    <string name="home_recommend_ten">近十场</string>
    <string name="home_expert_percent">0.0</string>
    <string name="home_expert_percent_1">%</string>
    <string name="home_expert_percent_2">盈利</string>
    <!-- ================================================================== Lottery ================================================================== -->
    <string name="lottery">开奖</string>
    <string name="lottery_next">距下次&#160;&#160;</string>
    <string name="lottery_next_time">距下期&#160;</string>
    <string name="lottery_history">历史开奖</string>
    <string name="lottery_zhu">路珠</string>
    <string name="lottery_trend">走势</string>
    <string name="lottery_expert_plan">专家计划</string>
    <string name="lottery_all">筛选号码</string>
    <string name="lottery_today">今天</string>
    <string name="lottery_yesterday">昨天</string>
    <string name="lottery_before_yesterday">前天</string>
    <string name="lottery_select_all">全选</string>
    <string name="lottery_select_clear">清空</string>
    <!-- ================================================================== Live ================================================================== -->
    <string name="live_room_say">说点什么吧…</string>
    <string name="live_room_close_menu">收起视频</string>
    <string name="live_room_clear_chat">清除聊天</string>
    <string name="live_room_manage_chat_clear">管理清屏</string>
    <string name="live_room_send">发送</string>
    <string name="lottery_recently">近10期</string>
    <string name="lottery_form">前三形态</string>
    <string name="lottery_recently_plan">近十期战绩</string>
    <!-- ================================================================== Moments ================================================================== -->
    <string name="moments">圈子</string>
    <string name="moments_download">下载</string>
    <!-- ================================================================== Mine ================================================================== -->
    <string name="mine_welcome">Hi~欢迎来到乐购直播</string>
    <string name="mine_login_text">登录开启你的娱乐世界</string>
    <string name="mine_balance">余额</string>
    <string name="mine_base_balance">0.00</string>
    <string name="mine_refresh">刷新</string>
    <string name="mine_diamond">钻石</string>
    <string name="mine_diamond_balance">0</string>
    <string name="mine_exchange">兑换</string>
    <string name="mine_deposit">存款</string>
    <string name="mine_draw_money">取款</string>
    <string name="mine_attention">关注</string>
    <string name="mine_msg_center">消息中心</string>
    <string name="mine_my_check">我的账单</string>
    <string name="mine_skin">主题皮肤</string>
    <string name="mine_anchor_get">主播招募</string>
    <string name="mine_feed_back">意见反馈</string>
    <string name="mine_contact_customer">在线客服</string>
    <string name="mine_message_center">消息中心</string>
    <string name="ic_mine_setting">设置</string>
    <string name="mine_contact_personal">个人资料</string>
    <string name="mine_user_name">用户名:</string>
    <string name="mine_user_sex">性别:</string>
    <string name="mine_user_sign">个性签名:</string>
    <string name="mine_user_sign_edit">请输入您的个性签名</string>
    <string name="mine_sign_num">0/50</string>
    <string name="mine_edit_name">请输入用户名</string>
    <string name="mine_edit_sex">男</string>
    <string name="mine_save">保存</string>
    <string name="mine_user_feed_descript">请描述您的反馈内容</string>
    <string name="mine_text_num">0/100</string>
    <string name="mine_feed_num">0/500</string>
    <string name="mine_them_skin">主题皮肤</string>
    <string name="mine_use">正在使用</string>
    <string name="mine_skin_use">立即使用</string>
    <string name="mine_say_some">说点什么吧..</string>
    <string name="close">关闭</string>
    <string name="letter">乐购传媒用户协议</string>
    <string name="mine_modify_pass_word">密码修改</string>
    <string name="mine_pay_pass_set">支付密码设置</string>
    <string name="mine_login_out">退出登录</string>
    <string name="mine_live_float_setting">直播间悬浮辅助</string>
    <string name="replay">回复</string>
    <string name="live_news">底部有新消息</string>
    <string name="mine_choose_card">请选择银行卡</string>
    <string name="mine_add_bank_card">添加银行卡</string>
    <string name="mine_bank_card">银行卡</string>
    <string name="mine_submit">提交</string>
    <string name="mine_card_address">开户城市</string>
    <string name="mine_card_address_up">开户支行</string>
    <string name="mine_card_open_name">开户姓名</string>
    <string name="mine_card_number">卡号</string>
    <string name="mine_card_pay_password">支付密码</string>
    <string name="mine_card_address_edit">请选择您的开户城市</string>
    <string name="mine_card_other_edit">请输入您的开户支行</string>
    <string name="mine_card_open_name_edit">请输入您的开户姓名</string>
    <string name="mine_card_number_edit">请输入您的银行卡号</string>
    <string name="mine_card_open_pass">请输入您的平台支付密码</string>
    <string name="mine_card_list">银行卡列表</string>
    <string name="mine_report">推广给好友成功下载APP并注册（注册时好友必须填写你的邀请码）后，
        被邀用户初次消费50即算邀请成功。被邀用户消费的余额，按照用户等级百分比转化给邀请用户。
        被邀请用户申请为推广员，邀请来的下级用户消费收入，会继续以10%比例向上转化收入。以此类推</string>
</resources>
