<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/grey_4a"
                android:text="@string/mine_choose_card" />

            <LinearLayout
                android:id="@+id/linPickLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUserBankCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_7"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_13" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_arrow_down"
                    android:contentDescription="@string/app_name" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/color_f5f5f5" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <TextView
                android:id="@+id/tvSecond"
                android:layout_width="@dimen/dp_66"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/grey_4a"
                android:text="@string/mine_card_address" />

            <TextView
                android:id="@+id/tvOpenCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_toEndOf="@+id/tvSecond"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/mine_card_address_edit"
                android:maxLines="1"
                android:textColorHint="@color/grey_d8"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/color_f5f5f5" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <TextView
                android:id="@+id/tvThird"
                android:layout_width="@dimen/dp_66"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/grey_4a"
                android:text="@string/mine_card_address_up" />

            <EditText
                android:id="@+id/etOpenCityOther"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_toEndOf="@+id/tvThird"
                android:textColorHint="@color/grey_d8"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/mine_card_other_edit"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/color_f5f5f5" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <TextView
                android:id="@+id/tvFour"
                android:layout_width="@dimen/dp_66"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/grey_4a"
                android:text="@string/mine_card_open_name" />

            <EditText
                android:id="@+id/etOpenName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_toEndOf="@+id/tvFour"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/mine_card_open_name_edit"
                android:textColorHint="@color/grey_d8"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/color_f5f5f5" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <TextView
                android:id="@+id/tvFive"
                android:layout_width="@dimen/dp_66"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/grey_4a"
                android:text="@string/mine_card_number" />

            <EditText
                android:id="@+id/etOpenNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_toEndOf="@+id/tvFive"
                android:background="@null"
                android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
                android:hint="@string/mine_card_number_edit"
                android:inputType="number"
                android:maxLength="19"
                android:textColorHint="@color/grey_d8"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/color_f5f5f5" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20">

            <TextView
                android:id="@+id/tvSix"
                android:layout_width="@dimen/dp_66"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/grey_4a"
                android:text="@string/mine_card_pay_password" />

            <EditText
                android:id="@+id/etOpenPassWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:textColorHint="@color/grey_d8"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_toEndOf="@+id/tvSix"
                android:background="@null"
                android:hint="@string/mine_card_open_pass"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_alignParentBottom="true"
                android:background="@color/color_f5f5f5" />
        </RelativeLayout>

        <com.fenghuang.baselib.widget.round.RoundTextView
            android:id="@+id/bindSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_marginStart="@dimen/dp_34"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_34"
            android:gravity="center"
            android:text="@string/mine_submit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            app:rv_backgroundColor="@color/color_FF513E"
            app:rv_backgroundPressColor="@color/color_FF513E"
            app:rv_cornerRadius="@dimen/dp_23" />


    </LinearLayout>


</RelativeLayout>