<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrendSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_5"
        tools:ignore="RtlSymmetry" />


    <LinearLayout
        android:id="@+id/rlSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rvTrendSelect"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTrendSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:drawableEnd="@mipmap/ic_arrow_down"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/lottery_all"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvTrendSelectForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:drawableEnd="@mipmap/ic_arrow_down"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/lottery_form"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvTrendSelectIssue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_15"
            android:drawableEnd="@mipmap/ic_arrow_down"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/lottery_recently"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14"
            android:visibility="gone" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvToDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rvTrendSelect"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_25"
        android:layout_toStartOf="@+id/tvYesterday"
        android:text="@string/lottery_today"
        android:textColor="@color/text_red"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:id="@+id/tvYesterday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rvTrendSelect"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_25"
        android:layout_toStartOf="@+id/tvBeforeYesterday"
        android:text="@string/lottery_yesterday"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:id="@+id/tvBeforeYesterday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rvTrendSelect"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_15"
        android:text="@string/lottery_before_yesterday"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_12" />


    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smartRefreshLayoutLotteryTrend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvToDay"
        android:layout_marginTop="@dimen/dp10">

        <LinearLayout
            android:id="@+id/trendContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <com.fenghuang.caipiaobao.widget.trendview.TrendViewHeadType
                android:id="@+id/trendViewHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ScrollView
                android:id="@+id/trendScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.fenghuang.caipiaobao.widget.trendview.TrendViewType
                        android:id="@+id/trendViewContent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:gravity="center_horizontal"
                        android:paddingTop="@dimen/sp_20"
                        android:paddingBottom="@dimen/dp_30"
                        android:text="@string/list_more"
                        android:textColor="@color/color_CCCCCC"
                        android:textSize="@dimen/sp_12"
                        app:layout_constraintTop_toBottomOf="@+id/rvExpertHot" />
                </LinearLayout>

            </ScrollView>
        </LinearLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


    <LinearLayout
        android:id="@+id/linTrendLoading"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.github.ybq.android.spinkit.SpinKitView
            style="@style/SpinKitView.Circle"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            app:SpinKit_Color="@color/grey_e6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/loading"
            android:textColor="@color/grey_e6"
            android:textSize="@dimen/sp_13" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="暂无数据"/>

</RelativeLayout>


